# Custom16CPU

./: .gitignore  CMakeLists.txt  Project Video.mkv  README.md  run.sh
docs/: cpu_schematic.dot  hw.dot
programs/: factorial.asm  factorial_layout.asm  factorial_layout.c  fibonacci.asm  hello.asm  timer.asm
src/assembler/: Assembler.cpp  main.cpp
src/emulator/: Emu16.cpp  main.cpp
